<resources>
    <string name="app_name">DiceRoll</string>
    <string name="select_the_dice">Select the Dice</string>
    <string name="roll1">Roll 1 Dice</string>
    <string name="roll2">Roll 2 Dice</string>
    <string name="roll_1">Roll 1:-</string>
    <string name="roll_2">Roll 2:-</string>
    <string name="result">result</string>
    <string name="enter_the_custom_number">Enter the custom Dice</string>
    <string name="enter_the_dice">Enter the Dice</string>
    <string name="add">Add</string>
</resources>