<?xml version="1.0" encoding="utf-8"?>
<!-- Jay Patel A00254220 -->
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_gravity="left">

                    <EditText
                        android:id="@+id/customValue"
                        android:layout_width="330dp"
                        android:layout_height="48dp"
                        android:gravity="center"
                        android:hint="@string/enter_the_dice"
                        android:inputType="number" />

                    <Button
                        android:id="@+id/addButton"
                        android:layout_width="wrap_content"
                        android:layout_height="48dp"
                        android:text="@string/add"/>

                </LinearLayout>

                <TextView
                    android:id="@+id/text_View"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:gravity="center"
                    style="@style/TextAppearance.Material3.BodyLarge"
                    android:text="@string/select_the_dice"/>

                <Spinner
                    android:id="@+id/spinner"
                    android:layout_width="match_parent"
                    android:layout_height="48dp" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:layout_gravity="center">

                    <LinearLayout
                        android:layout_width="150dp"
                        android:layout_height="48dp"
                        android:orientation="vertical"
                        android:layout_gravity="center">
                        <Button
                            android:id="@+id/roll_Button1"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:text="@string/roll1"/>

                        <TextView
                            android:id="@+id/textView"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="TextView" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="48dp"
                        android:orientation="vertical"
                        android:layout_gravity="center">
                        <Button
                            android:id="@+id/roll_Button2"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:text="@string/roll2"/>
                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:orientation="horizontal"
                    android:layout_gravity="center"
                    android:layout_weight="5">

                    <LinearLayout
                        android:layout_width="200dp"
                        android:layout_height="100dp"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:textSize="50sp"
                            android:text="@string/roll_1"/>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="200dp"
                        android:layout_height="100dp"
                        android:orientation="vertical">
                        <TextView
                            android:id="@+id/result1"
                            android:layout_width="match_parent"
                            android:layout_height="50dp"
                            android:gravity="center"
                            android:textSize="30sp"
                            android:text="@string/result"/>

                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:orientation="horizontal"
                    android:layout_gravity="center"
                    android:layout_weight="5">

                    <LinearLayout
                        android:layout_width="200dp"
                        android:layout_height="100dp"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:textSize="50sp"
                            android:text="@string/roll_2"/>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="200dp"
                        android:layout_height="100dp"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/result2"
                            android:layout_width="match_parent"
                            android:layout_height="50dp"
                            android:gravity="center"
                            android:textSize="30sp"
                            android:text="@string/result"
                            />

                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</ScrollView>